--- a/src/main/resources/org/example/cardgame24/hello-view.fxml
+++ b/src/main/resources/org/example/cardgame24/hello-view.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.cardgame24.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.cardgame24.HelloController">
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <HBox fx:id="cardContainer" alignment="CENTER" spacing="10">
+        <!-- Card images will be loaded here -->
+    </HBox>
+
+    <TextField fx:id="expressionField" maxWidth="300" promptText="Enter an expression..." />
+
+    <HBox alignment="TOP_CENTER" spacing="10">
+        <Button fx:id="verifyButton" onAction="#onVerifyClick" text="Verify" />
+        <Button fx:id="refreshButton" onAction="#onRefreshClick" text="Refresh" />
+    </HBox>
+
+    <Label fx:id="resultDialog" text="" />
 </VBox>
